# stm32-project

./: .clangd  .gitignore  Packs_Target_1.htm  test2+Target_1.cbuild-run.yml  test2+Target_1.cbuild.yml  test2.cbuild-idx.yml  test2.cbuild-pack.yml  test2.cbuild-set.yml  test2.cproject.yml  test2.csolution.yml  test2.uvguix.Zhang  test2.uvoptx  test2.uvprojx
App/: OLEDShow.c  OLEDShow.h  app.h  main.c
Driver/: AD.c  AD.h  ColorLED.c  ColorLED.h  Encoder.c  Encoder.h  InputCapture.c  InputCapture.h  KEY.c  KEY.h  LED.c  LED.h  LightSensor.c  LightSensor.h  MPU6050.c  MPU6050.h  Motor.c  Motor.h  MyI2C.c  MyI2C.h  OLED.h  OLED_Font.h  PassiveBuzzer.c  PassiveBuzzer.h  SPI.c  SPI.h  Serial.c  Serial.h  Servo.c  Servo.h  W25Q64.c  W25Q64.h  W25Q64_INS.h
Listings/: test2.map
Objects/: ad.d  colorled.d  delay.d  dma.d  encoder.d  inputcapture.d  interrupt.d  key.d  led.d  lightsensor.d  main.d  misc.d  motor.d  mpu6050.d  myi2c.d  oled.d  oledshow.d  os_systick.d  passivebuzzer.d  pwm.d  rtx_config.d  rtx_lib.d  serial.d  servo.d  spi.d  stm32f10x_adc.d  stm32f10x_dma.d  stm32f10x_exti.d  stm32f10x_gpio.d  stm32f10x_i2c.d  stm32f10x_rcc.d  stm32f10x_spi.d  stm32f10x_tim.d  stm32f10x_usart.d  system_stm32f10x.d  test2.axf  test2.build_log.htm  test2.htm  test2.lnp  test2_Target_1.dep  (+2 more)
RTE/_Target_1/: RTE_Components.h
System/: DMA.c  DMA.h  Interrupt.c  Interrupt.h  Timer.c  Timer.h
tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
tmp/1/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
tmp/test2+Target_1/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
tmp/test2+Target_1/src/test2+Target_1-stamp/: test2+Target_1-configure-.cmake  test2+Target_1-database-.cmake  test2+Target_1-source_dirinfo.txt
tmp/test2+Target_1/tmp/: test2+Target_1-cfgcmd.txt  test2+Target_1-mkdirs.cmake
